[gd_scene format=3 uid="uid://c0dwtll4gjg6v"]

[ext_resource type="Script" uid="uid://bwb4h83od4vgp" path="res://Scenes/ScreenUI/PilotScreen.gd" id="1_fq67n"]
[ext_resource type="Resource" uid="uid://dblsu2gs81rs6" path="res://Resources/EventHandlers/UIEventH.tres" id="2_ecvfe"]
[ext_resource type="Texture2D" uid="uid://s464nk64miu8" path="res://Assets/UIPiecies/Screen/Screen2_FullQuality.png" id="2_eeg0m"]
[ext_resource type="PackedScene" uid="uid://dn356hqaf372p" path="res://Scenes/ScreenUI/thrust_slider.tscn" id="3_ecvfe"]
[ext_resource type="Texture2D" uid="uid://ebrqin4q01s6" path="res://Assets/UIPiecies/Screen/ButtonCover2.png" id="4_uojtp"]
[ext_resource type="Texture2D" uid="uid://bvk1d6i2dr1sf" path="res://Assets/UIPiecies/Screen/Buttons/Switch2.png" id="5_hc833"]
[ext_resource type="Texture2D" uid="uid://bi5udi6g78ajr" path="res://Assets/UIPiecies/Screen/Buttons/Switch.png" id="6_gmup4"]
[ext_resource type="PackedScene" uid="uid://cwnxxystgxrjm" path="res://Scenes/ScreenUI/MissileTab.tscn" id="7_ojc6g"]
[ext_resource type="PackedScene" uid="uid://dwhre3xvmvjwf" path="res://Scenes/ScreenUI/Fan.tscn" id="8_bpouu"]
[ext_resource type="PackedScene" uid="uid://cugmsxkuwcfc4" path="res://Scenes/ScreenUI/map_marker_controls.tscn" id="9_yjfdw"]
[ext_resource type="PackedScene" uid="uid://hiw68h8srifm" path="res://Scenes/ScreenUI/SteeringWheelUI.tscn" id="10_w258d"]
[ext_resource type="PackedScene" uid="uid://cvhgybnbwc0e4" path="res://Scenes/ScreenUI/Aerophone.tscn" id="11_jqinv"]
[ext_resource type="Texture2D" uid="uid://dqxbuk83cw3ko" path="res://Assets/UIPiecies/Screen/Buttons/Button4_Camera 1_FullQuality.png" id="12_xmdut"]
[ext_resource type="Texture2D" uid="uid://dk83o628qhwwq" path="res://Assets/UIPiecies/Screen/Buttons/Button4_Camera 1_FullQuality_Pressed.png" id="13_u7arj"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="14_ce8jv"]
[ext_resource type="Texture2D" uid="uid://qsh4878cc3hs" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality.png" id="15_k3j1r"]
[ext_resource type="Texture2D" uid="uid://c2yp7vecjlnri" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality_Pressed.png" id="16_sifv7"]
[ext_resource type="Texture2D" uid="uid://l6nbrbftyppn" path="res://Assets/UIPiecies/Screen/Buttons/Button6_Camera 1_FullQuality.png" id="17_bj6mu"]
[ext_resource type="Texture2D" uid="uid://cdps8bwq7wdw2" path="res://Assets/UIPiecies/Screen/Buttons/Button6_Camera 1_FullQuality_Pressed.png" id="18_p7o8x"]
[ext_resource type="Texture2D" uid="uid://btjmdx1ok8w2r" path="res://Assets/UIPiecies/Screen/Buttons/Button5_Camera 1_FullQuality.png" id="19_xyyjl"]
[ext_resource type="Texture2D" uid="uid://770ytc3dmn3u" path="res://Assets/UIPiecies/Screen/Buttons/Button5_Camera 1_FullQuality_Pressed.png" id="20_r7w16"]
[ext_resource type="Texture2D" uid="uid://26rhnah0tact" path="res://Assets/UIPiecies/Screen/Buttons/Button10_Camera 1_FullQuality.png" id="21_73o3a"]
[ext_resource type="Texture2D" uid="uid://bdwuh13c5yg07" path="res://Assets/UIPiecies/Screen/Buttons/Button10_Camera 1_FullQuality_pressed.png" id="22_07ipk"]
[ext_resource type="FontFile" uid="uid://cg8x1e6y1264l" path="res://Fonts/Bank Gothic Light Regular.otf" id="23_j5ioc"]
[ext_resource type="PackedScene" uid="uid://djgy3lp61vapo" path="res://Resources/Funds/FundsDisplay.tscn" id="24_hpjxi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xl4i0"]
texture = ExtResource("4_uojtp")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="Foreground" type="Control" unique_id=1109053421 node_paths=PackedStringArray("ScreenItems", "MarkerEditorControls", "Thrust", "Steer", "MissileUI", "LandButton", "HatchButton", "ShipDockButton", "RegroupButton", "SimulationButton", "SpeedSimulationButton", "MapMarkerButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fq67n")
ScreenItems = NodePath("ScreenUi")
MarkerEditorControls = NodePath("MapMarkerControls")
Thrust = NodePath("ThrustSlider")
Steer = NodePath("SteeringWheel")
MissileUI = NodePath("ScreenUi/Missile Tab")
EventHandler = ExtResource("2_ecvfe")
LandButton = NodePath("LandButton")
HatchButton = NodePath("OpenHatchButton")
ShipDockButton = NodePath("ShipDockButton")
RegroupButton = NodePath("Regroup")
SimulationButton = NodePath("SimulationButton")
SpeedSimulationButton = NodePath("SpeedSimulation")
MapMarkerButton = NodePath("MarkerEditorButton")

[node name="ScreenBackground" type="TextureRect" parent="." unique_id=776636619]
custom_minimum_size = Vector2(0, 38.045)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_eeg0m")
expand_mode = 1

[node name="ThrustSlider" parent="." unique_id=1806408407 instance=ExtResource("3_ecvfe")]
layout_mode = 1
offset_left = -114.0
offset_top = -371.0
offset_right = -13.0
offset_bottom = -46.0

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1348607806]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 274.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xl4i0")

[node name="HBoxContainer" type="GridContainer" parent="PanelContainer" unique_id=1615443807]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
columns = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=454486474]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer" unique_id=59134153]
layout_mode = 2
size_flags_horizontal = 3
text = "Forecast"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForecastButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer" unique_id=1543431757 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=612401798]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer3" unique_id=1759128554]
layout_mode = 2
size_flags_horizontal = 3
text = "Steer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SteerButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer3" unique_id=473349722 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=1595393668]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2" unique_id=1070936723]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer2" unique_id=576665355 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=1275938163]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer4" unique_id=343234596]
layout_mode = 2
size_flags_horizontal = 3
text = "Zoom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ZoomLevelButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer4" unique_id=237729151 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="VBoxContainer5" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=1208609242]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label5" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer5" unique_id=2121481371]
layout_mode = 2
size_flags_horizontal = 3
text = "Team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer5" unique_id=547958567 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="VBoxContainer6" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=480733801]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label5" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer6" unique_id=116981545]
layout_mode = 2
size_flags_horizontal = 3
text = "AeroSonar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SonarButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer6" unique_id=906423234 groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
stretch_mode = 5

[node name="ScreenUi" type="Control" parent="." unique_id=1868534827]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Missile Tab" parent="ScreenUi" unique_id=1968593876 instance=ExtResource("7_ojc6g")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 118.0
offset_top = -230.0
offset_right = 158.0
offset_bottom = -190.0
grow_horizontal = 1
grow_vertical = 2

[node name="Fan" parent="." unique_id=159958918 instance=ExtResource("8_bpouu")]
position = Vector2(1002, -125.00001)
scale = Vector2(1.64062, 1.64062)
frame_progress = 0.96041
frequency = 40.0

[node name="MapMarkerControls" parent="." unique_id=329577773 instance=ExtResource("9_yjfdw")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 91.0
offset_top = 78.0
offset_right = 131.0
offset_bottom = 118.0
grow_horizontal = 1

[node name="SteeringWheel" parent="." unique_id=760456773 instance=ExtResource("10_w258d")]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 1
grow_vertical = 0
scale = Vector2(0.8, 0.8)
PositionOnStart = false

[node name="Sonar" parent="." unique_id=1555836270 instance=ExtResource("11_jqinv")]
layout_mode = 1
offset_left = 15.0
offset_top = -20.0
offset_right = 55.0
offset_bottom = 20.0

[node name="SpeedSimulation" type="TextureButton" parent="." unique_id=559113668 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -606.0
offset_right = -25.0
offset_bottom = -546.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("5_hc833")
texture_pressed = ExtResource("6_gmup4")
ignore_texture_size = true
stretch_mode = 0

[node name="SimulationButton" type="TextureButton" parent="." unique_id=1371599435 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -527.0
offset_right = -30.0
offset_bottom = -481.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("12_xmdut")
texture_pressed = ExtResource("13_u7arj")
ignore_texture_size = true
stretch_mode = 0

[node name="InventoryButton" type="TextureButton" parent="." unique_id=663530296 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -49.0
offset_right = -31.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_ce8jv")
action_mode = 0
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0

[node name="Regroup" type="TextureButton" parent="." unique_id=965515111 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -49.0
offset_right = -201.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_ce8jv")
texture_normal = ExtResource("17_bj6mu")
texture_pressed = ExtResource("18_p7o8x")
ignore_texture_size = true
stretch_mode = 0
flip_v = true

[node name="MarkerEditorButton" type="TextureButton" parent="." unique_id=517021353 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -6.0
offset_right = -225.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0

[node name="ShipDockButton" type="TextureButton" parent="." unique_id=742152796 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -409.0
offset_right = -116.0
offset_bottom = -390.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0

[node name="MissileButton" type="TextureButton" parent="." unique_id=1264898932 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -222.0
offset_right = -225.0
offset_bottom = -177.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="OpenHatchButton" type="TextureButton" parent="." unique_id=2103001581 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -77.0
offset_right = -225.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="RadarButton" type="TextureButton" parent="." unique_id=1050150311 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -294.0
offset_right = -225.0
offset_bottom = -249.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("19_xyyjl")
texture_pressed = ExtResource("20_r7w16")
ignore_texture_size = true
stretch_mode = 0

[node name="LandButton" type="TextureButton" parent="." unique_id=786699123 groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -149.0
offset_right = -225.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("21_73o3a")
texture_pressed = ExtResource("22_07ipk")
ignore_texture_size = true
stretch_mode = 0

[node name="Pause" type="TextureButton" parent="." unique_id=1859956281 groups=["Buttons"]]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = 41.0
offset_right = -31.0
offset_bottom = 84.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_ce8jv")
texture_normal = ExtResource("15_k3j1r")
texture_pressed = ExtResource("16_sifv7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Pause" unique_id=806368291]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -25.5
offset_right = 27.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.651769, 0.651769, 0.651769, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("23_j5ioc")
theme_override_font_sizes/font_size = 40
text = "II"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fund_Container" parent="." unique_id=1956462459 instance=ExtResource("24_hpjxi")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -179.0
offset_top = 9.0
offset_right = -179.0
offset_bottom = 96.0
grow_horizontal = 0
grow_vertical = 1

[connection signal="AccelerationChangeEnded" from="ThrustSlider" to="." method="Acceleration_Ended"]
[connection signal="AccelerationChanged" from="ThrustSlider" to="." method="Acceleration_Changed"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/ForecastButton" to="." method="_on_forecast_button_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer3/SteerButton" to="." method="_on_steer_button_toggled"]
[connection signal="SteeringDitChanged" from="SteeringWheel" to="." method="Steering_Direction_Changed"]
[connection signal="SteeringOffseted" from="SteeringWheel" to="." method="Steer_Offseted"]
[connection signal="toggled" from="SpeedSimulation" to="." method="_on_speed_simulation_toggled"]
[connection signal="pressed" from="SimulationButton" to="." method="Sim_Pause_Pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="Inventory_Pressed"]
[connection signal="pressed" from="Regroup" to="." method="Regroup_Pressed"]
[connection signal="pressed" from="MarkerEditorButton" to="." method="Marker_Editor_Button_Pressed"]
[connection signal="pressed" from="ShipDockButton" to="." method="Ship_Dock_Button_Pressed"]
[connection signal="pressed" from="MissileButton" to="." method="Missile_Button_Pressed"]
[connection signal="pressed" from="OpenHatchButton" to="." method="Open_Hatch_Button_Pressed"]
[connection signal="pressed" from="RadarButton" to="." method="Radar_Button_Pressed"]
[connection signal="pressed" from="LandButton" to="." method="Land_Pressed"]
[connection signal="pressed" from="Pause" to="." method="Pause_Pressed"]
